--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "devStart": "nodemon index.js --ignore modules.json"
   },
   "keywords": [
     "Dualis",
@@ -15,6 +16,13 @@
   "author": "Timo",
   "license": "ISC",
   "dependencies": {
-    "got": "^12.5.3"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "got": "^12.5.3",
+    "jsonwebtoken": "^9.0.0",
+    "mysql2": "^3.1.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
