--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   syncfusion_flutter_charts: ^20.4.49
   font_awesome_flutter: ^10.4.0
   intl: ^0.18.0
+  shared_preferences: ^2.0.18
 
 dev_dependencies:
   flutter_test:
