--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   font_awesome_flutter: ^10.4.0
   intl: ^0.18.0
   shared_preferences: ^2.0.18
+  mysql1: ^0.20.0
 
 dev_dependencies:
   flutter_test:
