--- a/dualis-api/package.json
+++ b/dualis-api/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "devStart": "nodemon index.js --ignore modules.json"
+    "devStart": "nodemon index.js --ignore course.json"
   },
   "keywords": [
     "Dualis",
@@ -19,6 +19,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "got": "^12.5.3",
+    "jsdom": "^21.1.1",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.1.2"
   },
